--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </div>
             <div class="form-campo">
                 <label for="telefone">Telefone</label>
-                <input type="tel" id="telefone" name="telefone">
+                <input type="tel" id="telefone" name="telefone" data-mask='(00) 00000-0000'>
             </div>
             <div class="form-campo">
                 <label for="cpf">CPF</label>
-                <input type="text" id="cpf" name="cpf">
+                <input type="text" id="cpf" name="cpf" data-mask="000.000.000-00">
             </div>
             <div class="form-campo">
                 <label for="endereco">Endereço completo</label>
@@ -55,16 +55,16 @@
             </div>
             <div class="form-campo">
                 <label for="cep">CEP</label>
-                <input type="text" id="cep" name="cep">
+                <input type="text" id="cep" name="cep" data-mask="00000-000">
             </div>
             <button type="submit">Enviar</button>
         </form>
     </div>
-    <script src="./js/jquery.mask.min.js"></script>
-    <script src="./js/jquery.validate.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/jquery.mask.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
     <script src="./js/messages_pt_BR.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
